# vercel-fastapi

./: .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
src/: main.py
src/api/: hello.py
src/hello/: graph.py
